# CLImage

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
climage/: __init__.py  __main__.py  climage.py  main.py
extra/: colorextract.py  colourings
